# NamedParameter

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
include/: named-parameters.hpp
tests/: CMakeLists.txt  UT_NOK_compatible_to_default_int.cpp  UT_NOK_compatible_to_default_str.cpp  UT_NOK_missing_mandatory-1.cpp  UT_NOK_missing_mandatory-4.cpp  UT_NOK_redundant_parameter-1.cpp  UT_NOK_redundant_parameter-4.cpp  UT_OK.cpp
